test/typecheck/errors/tuple-redecl.boa
type foo = {a: float, b: float, a: bool};
